--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
 <html lang="ru">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="shortcut icon" href="static/templates/favicon.png"/>
+    <link rel="shortcut icon" href="{% static 'static/templates/favicon.png' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'static/templates/style.css' %}">
     <link rel="stylesheet" type="text/css" href='{% static "static/templates/bootstrap/css/bootstrap.min.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "static/templates/fileManager/grid.css" %}'>
@@ -12,61 +12,70 @@
     <title>Сквозная диагностика</title>
 
 </head>
-<body onload="slider('slider',0)">
+<body>
 
 <div class="container main-container">
     <div class="jumbotron">
+
+
         <table class="main-table">
+
             <tr>
-                <td colspan="3" class="ramka section-title">Сквозная диагностика Call-центра</td>
+                <td colspan="2" class="section-title">Сквозная диагностика Call-центра</td>
             </tr>
+
             <tr>
-                <td rowspan="4" class="ramka section-file-manager">
+
+                <td rowspan="4" class="section-file-manager">
 
                     {% block file_manager %}
                     {% endblock %}
 
                 </td>
-                <td rowspan="2" class="ramka section-variants">
+
+                <td class="section-variants">
+
                     <div class="section-variants-title">
-
-                    {% block state_move %}{% endblock %}
-
-
+                        {% block state_move %}{% endblock %}
                     </div>
+
                     <div class="wrap-variants b-init b-target">
-
-                    {% block state_variants %}{% endblock %}
-
+                        {% block state_variants %}{% endblock %}
                     </div>
 
                     <div class="btn btn-primary confirm-button">OK!</div>
 
                 </td>
-                <td class="ramka reserved">=Reserved 1=</td>
+
             </tr>
-            </tr>
+
             <tr>
 
-                <td class="ramka reserved">=Reserved 2=</td>
-            </tr>
-            </tr>
-            <tr>
-                <td class="ramka section-results">
+                <td class="section-results">
+
                     <div class="form-group">
-                        <textarea class="form-control section-results-txt" rows="3" id="comment">Составление коментария, промежуточный итог, который можно редактировать</textarea>
+                        <textarea class="form-control section-results-txt" rows="3" id="comment">
+                            Составление коментария, промежуточный итог, который можно редактировать
+                        </textarea>
                     </div>
+
                 </td>
-                <td class="ramka reserved">=Reserved 3=</td>
+
             </tr>
-            </tr>
+
             <tr>
-                <td class="ramka section-tips">
+
+                <td class="section-tips">
+
                     {% block tips %}{% endblock %}
+
                 </td>
-                <td class="ramka reserved">=Reserved 4=</td>
+
             </tr>
+
         </table>
+
+
     </div>
 </div>
 
@@ -76,7 +85,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src='{% static "static/templates/jquery.min.js" %}'></script>
 <script src='{% static "static/templates/bootstrap/js/bootstrap.min.js" %}'></script>
-<script src='{% static "static/templates/fileManager/tree_toggle.js" %}'></script>
-    <script src='{% static "static/templates/variantsBuilder.js" %}'></script>
+<script src='{% static "static/templates/functions.js" %}'></script>
 </body>
 </html>
